--- a/.i3status.conf
+++ b/.i3status.conf
@@ -8,6 +8,9 @@
 
 general {
         colors = true
+        color_good = "#2E9D54"
+        color_bad = "#cc6666"
+        color_degraded = "#81a2be"
         interval = 5
 }
 
