--- a/.i3/config
+++ b/.i3/config
@@ -28,7 +28,7 @@ bindsym $mod+Return exec urxvt
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+bindsym $mod+d exec  dmenu_run -nb '#0a0f14' -nf '#777ad0' -sb '#c476d8' -sf '#fefefe' -fn 'DejaVu Sans Mono for Powerline-12'
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
